fixing form style on mobile

--- a/styles.css
+++ b/styles.css
@@ -1478,26 +1478,7 @@ footer p{
 
 
 
-#contactform{
-	max-width: 400px;
-   padding: 40px 40px 0px 40px
-   
-}
 
-
-.label {
-	background-color: transparent;
-	border: none;
-
-
-
-}
-
-.label h6 {
-
-	margin-top: 20px;
-	max-width: 300px;
-}
 
 
 
